Implement scalable AmazonHelp interaction extraction